--- a/tests/existing_org_file.org
+++ b/tests/existing_org_file.org
@@ -1,3 +1,21 @@
+* Past Meeting That Got Canceled
+:PROPERTIES:
+:ICAL_EVENT:    t
+:ID:            040000008200E00074C5B7101A82E00800000000503C5E0F0DAFDB01000000000000000010000000EF47E2D44EC75944C3FD5BDC306E979
+:STATUS:        CANCELLED
+:LOCATION:      Meeting Room 3B
+:DURATION:      01:00 hh:mm
+:END:
+<2025-04-23 Wed 09:00-10:00>
+
+#+begin_agenda
+Discussion about project timeline and resource allocation
+#+end_agenda
+
+- These are important notes I want to keep
+- Even though the meeting was canceled
+- We covered these points in email instead
+
 * Review WellAdmin/TradV Feed and discuss policy year field 
 :PROPERTIES:
 :ICAL_EVENT:    t
@@ -36,20 +54,20 @@ Regular team sync to discuss weekly progress and blockers.
   - Completed the data model
   - Need help with testing approach
 
-* Past Meeting That Got Canceled
+* Strategy Planning Session
 :PROPERTIES:
 :ICAL_EVENT:    t
-:ID:            040000008200E00074C5B7101A82E00800000000503C5E0F0DAFDB01000000000000000010000000EF47E2D44EC75944C3FD5BDC306E979
+:ID:            040000008200E00074C5B7101A82E0080000000070DEAD10BDEADB01000000000000000010000000ABCDEF1234567890ABCDEF123456789
 :STATUS:        CONFIRMED
-:LOCATION:      Meeting Room 3B
-:DURATION:      01:00 hh:mm
+:LOCATION:      Conference Room A
+:DURATION:      02:00 hh:mm
 :END:
-<2025-04-23 Wed 09:00-10:00>
+<2025-04-29 Tue 13:00-15:00>
 
 #+begin_agenda
-Discussion about project timeline and resource allocation
+Meeting to discuss Q3 strategy and align on priorities for upcoming initiatives.
 #+end_agenda
 
-- These are important notes I want to keep
-- Even though the meeting was canceled
-- We covered these points in email instead
+- Need to prepare slides for my section
+- Share latest metrics from Q2 performance
+
