--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+CREATED: [2025-04-24 Thu 15:44]
-#+UPDATED: [2025-04-24 Thu 20:58]
+#+UPDATED: [2025-04-29 Tue 15:47]
 * ics-to-org
 
 #+HTML: <a href="https://github.com/andyreagan/ics-to-org/actions/workflows/python-test-publish.yml"><img src="https://github.com/andyreagan/ics-to-org/actions/workflows/python-test-publish.yml/badge.svg" alt="Tests"></a> <a href="https://badge.fury.io/py/ics-to-org"><img src="https://badge.fury.io/py/ics-to-org.svg" alt="PyPI version"></a>
@@ -37,15 +37,15 @@ sync_calendar --ics-url "https://outlook.office365.com/..." \
 
 Command-line options:
 
-| Option           | Description                                                 |
-|------------------+-------------------------------------------------------------|
-| --ics-url        | URL of the iCalendar feed (required)                        |
-| --org-file       | Path to the org file to update (required)                   |
-| --author         | Your name, used in the org file (required)                  |
-| --email          | Your email, used in the org file (required)                 |
-| --days-forward   | Number of days forward to fetch (default: 7)                |
-| --days-backward  | Number of days backward to fetch (default: 0)               |
-| --no-format-dates | Disable the formatting of all-day and multi-day events      |
+| Option            | Description                                            |
+|-------------------+--------------------------------------------------------|
+| --ics-url         | URL of the iCalendar feed (required)                   |
+| --org-file        | Path to the org file to update (required)              |
+| --author          | Your name, used in the org file (required)             |
+| --email           | Your email, used in the org file (required)            |
+| --days-forward    | Number of days forward to fetch (default: 7)           |
+| --days-backward   | Number of days backward to fetch (default: 0)          |
+| --no-format-dates | Disable the formatting of all-day and multi-day events |
 
 By default, the script formats all-day events as =<2025-04-27 Sun>= (without time)
 and multi-day events as =<2025-04-27 Sun>--<2025-04-28 Mon>= (inclusive dates).
@@ -53,9 +53,9 @@ If you prefer to keep the raw timestamps with the 00:00 times, use the =--no-for
 
 This script will:
 
-- Fetch the latest calendar data using icsorg for the specified time range
+- Fetch the latest calendar data using =icsorg= for the specified time range
   - Default is 7 days forward and 0 days backward from the current date
-  - Customize with --days-forward and --days-backward options
+  - Customize with --days-forward and --days-backward options (passed through to =icsorg=)
 - For each event in your calendar:
   - Update the header, properties, and scheduling from the calendar
   - If the event has a description in the calendar, update the #+begin_agenda #+end_agenda block
